# rustc-TioN

./: .gitignore  Cargo.toml  README.md  run.bat
.github/workflows/: audit-check.yml
main server/: Cargo.toml  readme.md
main server/setup/: tion.sql
main server/src/: main.rs
main server/src/public/: index.rs  login.rs  mod.rs  register.rs  responses.rs  securitypool.rs  user.rs
main server/src/public/management/: device.rs  mod.rs  securitypool.rs
main server/src/server/: authorization.rs  mod.rs  notifications.rs  security.rs  settings_private.rs.example  sql_connector.rs
main server/src/server/structures/: device.rs  device_types.rs  mod.rs  roles.rs  security_pool.rs  user.rs
src/: main.rs
userInterface/: .htaccess  login.php
userInterface/assets/css/: animations.css  car.css  compare.css  config.css  globalstyle.css  login.css  misc.css  nav.css
userInterface/assets/js/: car.js  compare.js  login.js  main-animations.js  main-backend.js  register.js
userInterface/view/: TEMPLATE.php
