[package]
name = "rustc-first"
version = "0.1.0"
authors = ["onno204 <15333546+onno204@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
reqwest = "0.9.22"
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"
mysql = "*"
